<resources>

    <string name="app_name">Kosmos</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>
    <string name="hint_product_name">Nombre</string>
    <string name="category_overview">Introduce una foto</string>
    <string name="hint_product_quantity">Cantidad</string>

    <string name="supplier_1">Trabajador1</string>
    <string name="supplier_2">Trabajador2</string>
    <string name="supplier_3">Trabajador3</string>
    <string name="supplier_4">Trabajador4</string>
    <string name="supplier_5">Trabajador5</string>
    <string name="supplier_6">Trabajador6</string>
    <string name="supplier_7">Trabajador7</string>
    <string name="supplier_8">Trabajador8</string>
    <string name="supplier_9">Trabajador9</string>
    <string name="supplier_10">Trabajador10</string>
    <string name="category_supplier">Trabajador</string>

    <string name="hint_product_supplier_name">Name of Supplier</string>
    <string name="hint_product_supplier_contact">Supplier\'s email</string>
    <string name="category_supplier_contact">Trabajador Email</string>
    <string name="product_decrease_quantity_label">-</string>
    <string name="product_increase_quantity_label">+</string>
    <string name="product_order_more_label">Enviar un correo al proveedor </string>

    <string name="product_decrease_button_negative">Producto no puede ser menor que cero </string>
    <string name="unsupported_insertion">La inserción no es compatible para</string>
    <string name="insert_product_no_name">El producto necesita una descripcion</string>
    <string name="insert_product_no_quantity">Se requiere cantidad de producto</string>
    <string name="insert_product_no_price">Se requiere precio de producto</string>
    <string name="insert_product_no_supplier">Se requiere asignar a trabajador </string>
    <string name="insert_product_no_supplier_contact">Se requiere informacion de trabajador </string>
    <string name="insert_failure">Error al insertar la fila </string>
    <string name="delete_product_failure">La eliminación no es compatible con:</string>
    <string name="update_product_no_desc">El producto requiere una descripción</string>
    <string name="update_product_no_quantity">Se requiere cantidad de producto</string>
    <string name="update_product_no_price">Se requiere precio valido de producto</string>
    <string name="update_product_no_supplier">Se requiere asignar a trabajador</string>
    <string name="update_product_no_supplier_contact">Se requiere informacion de trabajador </string>
    <string name="update_product_failure">La actualizacion no es compatible para</string>
    <string name="editor_save_product_no_price">El precio no se puede dejar en blanco!</string>
    <string name="hint_product_price">Precio</string>
    <string name="catalog_desc_header">Descripcion</string>
    <string name="catalog_quantity_header">Cantidad</string>
    <string name="catalog_price_header">Precio</string>
    <string name="provider_type_mismatch_part1">URI desconocido</string>
    <string name="provider_type_mismatch_part2">con partido </string>
    <string name="list_item_qty_not_sufficient">¡Actualmente no disponible!</string>

    <!-- Text for empty view with instructions to the user on how to populate the database  -->
    <string name="user_instructions">
        No hay productos para mostrar. \ N
        Presione el botón de abajo para ingresar la información del nuevo producto y guárdelo en la base de datos.
    </string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="product_fragment_title">Informacion de producto</string>

    <!-- Subject for email to product supplier demanding more supplies [CHAR LIMIT=30] -->
    <string name="product_order_more_email_subject">Requerir el envio</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="product_insert_product_failed">Error al guardar producto</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="product_insert_product_successful">Producto guardado</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="product_update_product_failed">Error al actualizar el producto.</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="product_update_product_successful">Producto actualizado</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="product_delete_product_failed">Error al eliminar el producto</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="product_delete_product_successful">Producto Eliminado</string>

    <!-- Price label in list item view to tag the product price information [CHAR LIMIT=20] -->
    <string name="list_item_price_label">Precio: $</string>

    <!-- Log message for multiple item update when single product content URI was provided -->
    <string name="list_item_sell_error">Coincidencia multiple para URI</string>

    <!-- Toast message to the user when product image for existing product is added/edited [CHAR LIMIT=30] -->
    <string name="editor_product_image_update_success">Imagen del producto exitosamente actualizada</string>
    <string name="price">Precio</string>
    <string name="product_image_cd">Producto Image</string>
    <string name="product_camera_cd">Boton que abre la camara movil para capturar la imagen del producto.</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cliente</string>
    <string name="menu_slideshow">Nosotros</string>
    <string name="menu_tools">Manual de usuario</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Salir</string>
    <string name="title_activity_home_log_in">HomeLogIn</string>
    <string name="title_activity_sub_menu">SubMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bt_alta_eventos">Alta</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>


    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_log_in_ok">HomeLogInOk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="tvEmailAcceso">Correo</string>
    <string name="slider4_nosAdaptamos">Contáctanos y haremos el producto a medida.</string>
    <string name="slider4_nosAdaptamos2">!Para que ahorreis lo máximo posible!</string>
    <string name="slider3_scannerCamara">Interfaz cómoda y sencilla para localizar tus productos.</string>
    <string name="slider3_scannerCamara2">¡¡Escanea y Listo!!</string>
    <string name="slider2_gestiónClientes">Gestiona tus clientes de forma fácil e intuitiva</string>
    <string name="slider1_stockDescripcion">Gestionar el Stock de tu inventario más fácil que nunca.</string>
    <string name="nav_header_welcome">¡Bienvenido a Kosmos!</string>
    <string name="permisoIMG">Permite el acceso para insertar una imagen</string>
    <string name="nav_header_title">Bienvenido a KOSMOS</string>
    <string name="nav_header_subtitle">clean4you@gmail.com</string>
    <string name="tvContacto">Contactos</string>
    <string name="tvDesarrolador">Desarroladores</string>
    <string name="tvTelf">Numero de telefono: 921231243</string>
    <string name="tvDireccion">Direccion: C/ Perales, 12 - 14, 28703 – San Sebastián de los Reyes, Madrid</string>
    <string name="tvMaUsa">Esta aplicacion cuenta con muchas funcionalidades entre ellas podemos destacar el añadir eliminar o modificar productos, en el caso de que queden pocos productos enviara un aviso al administrador.</string>


</resources>
