<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_domain"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_manualUsuario"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_nosotros"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_input_get"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="?attr/actionModeCloseDrawable"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
