
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDesarrollador"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:gravity="center"
                android:text="@string/tvDesarrolador"
                android:textSize="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgJin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:srcCompat="@drawable/jin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombreJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Jincheng Weng" />

                <TextView
                    android:id="@+id/tvEmailJ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="jinchenwen97@gmail.com" />

                <TextView
                    android:id="@+id/tvRolesJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Diseñador" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgSteven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:srcCompat="@drawable/steven" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombreS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Steven Rosero" />

                <TextView
                    android:id="@+id/tvEmailS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="steven.ros.cap@gmail.com" />

                <TextView
                    android:id="@+id/tvRolesS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ScrumMaster" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDario"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:srcCompat="@drawable/dario" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombreD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Dario Villareal" />

                <TextView
                    android:id="@+id/tvEmailD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="dariovillarrealguillo@gmail.com" />

                <TextView
                    android:id="@+id/tvRolesD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CloudMaster" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContactos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvContacto"
                android:textSize="50dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvTelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tvTelf"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:padding="10dp"
                android:text="@string/tvDireccion"
                android:textSize="25dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
